# RayTracing

./: .gitignore  Cargo.toml  LICENSE  README.md  acq.md
raytracer/: Cargo.toml
raytracer/src/: bvh.rs  camera.rs  hittable.rs  hittable_static.rs  main.rs  material.rs  material_static.rs  onb.rs  scenes.rs  shared_tools.rs  texture.rs
raytracer_codegen/: Cargo.toml
raytracer_codegen/src/: lib.rs  scene_gen.rs  shared_tools.rs  vec3.rs
src/: bvh.rs  camera.rs  hittable.rs  main.rs  material.rs  onb.rs  pdf.rs  ray.rs  scenes.rs  shared_tools.rs  texture.rs  vec3.rs
